redalert-config/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redalert
  labels:
    app: redalert
spec:
  type: NodePort
  selector:
    app: redalert
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
