redalert-config/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redalert
  labels:
    app: redalert
spec:
  backend:
    serviceName: redalert
    servicePort: 80
